platform/oss/kyverno-system/kustomize/deny-cap-net-raw/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-cap-net-raw
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - kind: Pod
    policy: deny-cap-net-raw
    resources:
      - badpod
    result: fail
    rule: deny-cap-net-raw
  - kind: Pod
    policy: deny-cap-net-raw
    resources:
      - goodpod
    result: pass
    rule: deny-cap-net-raw
